# claims_rl

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  llm_policy.py  policy.py  trainer.py
dashboard/: app.py
data/: dataset.py
env/: __init__.py  environment.py
environment/: environment.py
judge/: __init__.py  judge.py  llm_judge.py  metrics.py  reward.py
scripts/: compare.py  plot.py  run_episode.py  train.py
src/claims_rl_env/: config.py
src/claims_rl_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/claims_rl_env/agent/: __init__.py  bandit.py  config.py  llm_client.py  llm_policy.py  policy.py  policy_gradient.py  ppo.py  trainer.py
src/claims_rl_env/cli/: compare.py  plot.py  run_episode.py  train.py
src/claims_rl_env/data/: __init__.py
src/claims_rl_env/environment/: __init__.py  actions.py  curriculum.py  environment.py  state.py
src/claims_rl_env/judge/: __init__.py  judge.py  llm_judge.py  metrics.py  reward.py
src/claims_rl_env/utils/: __init__.py  experiment.py  logging.py
tests/: test_environment.py  test_policy.py  test_trainer.py
