[project]
name = "claims_rl_env"
version = "0.1.0"
description = "RL environment for LLM training for Claims Evaluation"
authors = [{name = "Nick Melamed"}]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train-rl = "claims_rl_env.cli.train:main"
run-episode = "claims_rl_env.cli.run_episode:main"
plot-exp = "claims_rl_env.cli.plot:main"
compare-exp = "claims_rl_env.cli.compare:main"
